# himalaya-gui

./: .gitignore  Cargo.toml  Cranky.toml  Makefile  Readme.md  Todo.md  build.rs  rust-toolchain  rustfmt.toml  theme.css
crates/css/: Cargo.toml
crates/css/src/: lib.rs  parser.rs  properties.rs  rules.rs
crates/styling/: Cargo.toml
crates/styling/src/: element.rs  fonts.rs  lib.rs  properties.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs  server.rs  theme.rs
crates/ui/src/ui/: envelopes.rs  label.rs  mailbody.rs  mailboxes.rs  mod.rs  toolbar.rs
src/: com.paulrouget.himalaya-gui.gschema.xml  main.rs  utils.rs
src/collection_object/: imp.rs  mod.rs
src/resources/: resources.gresource.xml
src/task_object/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
