[workspace]
resolver = "2"
members = [
  "crates/styling",
  "crates/css",
  "crates/ui",
]

[patch."https://github.com/emilk/egui.git"]
egui = { path = "../egui/crates/egui" }
eframe = { path = "../egui/crates/eframe" }

[patch."https://github.com/soywod/himalaya.git"]
himalaya = { path = "../himalaya/" }

[patch.crates-io]
winit = { path = "../winit/" }
