[workspace]
resolver = "2"
members = [
  "crates/styling",
  "crates/css",
  "crates/ui",
]

[patch."https://github.com/emilk/egui.git"]
egui = { git = "https://github.com/paulrouget/egui.git", branch = "allocate_margins" }
eframe = { git = "https://github.com/paulrouget/egui.git", branch = "allocate_margins" }

[patch.crates-io]
winit = { git = "https://github.com/paulrouget/winit.git", branch = "paul" }
