[package]
name = "himalaya-gui"
version = "0.1.0"
edition = "2021"
authors = ["Paul Rouget <me@paulrouget.com>"]
description = "Email client"
license = "MIT"
keywords = [ "mail", "email", "gtk"]
repository = "https://github.com/paulrouget/himalaya-gui"

[badges]
maintenance = { status = "experimental" }

[dependencies]
gtk = { version = "0.5", package = "gtk4" }
adw = { version = "0.2.0-alpha.2", package = "libadwaita" }
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xshell = "0.2"
dirs = "4.0"
walkdir = "2.3"

[build-dependencies]
glib-build-tools = "0.16"

