[package]
name = "himalaya-ui"
version = "0.0.1"
edition = "2021"

[dependencies]

styling = { path = "../styling" }
css = { path = "../css" }

# Disable builtin fonts
egui = { git = "https://github.com/emilk/egui.git", default-features = false }
eframe = { git = "https://github.com/emilk/egui.git", features = ["wgpu"] }
himalaya = { git = "https://github.com/soywod/himalaya.git", branch = "develop" }
himalaya-lib = { version = "0.1", features = ["imap-backend"] }
chrono = "0.4"
dark-light = "0.2"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
notify = "5.0"
parking_lot = "0.12"
